--- a/private/style.css
+++ b/private/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Titillium Web', sans-serif;
-    background: url(/private/images/background.png);
+    background: url(/images/background.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
