--- a/private/index.ejs
+++ b/private/index.ejs
@@ -8,32 +8,105 @@
     <link rel="shortcut icon" href="images/logo.icon">
   
     <header>
-      <a href="/private/index.html">
+      <a href="/">
         <img class="logo" src="images/logo.png" alt="SyllaExchange-Logo">
       </a>
   
-      <h1 class="title"><a href="/private/index.html" id="title_link">SyllaExchange</a></h1>
+      <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
   
-      <input type="button" value="connexion" id="connexion" onclick="location.href='/private/login.html';">
-  
+      <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
+
     </header>
 </head>
 
 <body>
-    <hr>
+    <hr>  
 
-    <ul>
-        <li>lien de vente</li>
-        <li>tableau de vente</li>
-        <li>barre de Recherche</li>
-        <li>tirer</li>
-    </ul>
+    <a href="/sell">Sell a syllabus</a>
     
     <div class="search">
-        <form action="/" method="get">
-          <input id="input_search" type="text" placeholder="Recherche" name="looking_for" required>
-  
-          <button id="button_search" type="submit" name="btn_search" value="searching">🔎</button>
-        </form>
+      <form action="/" method="get">
+        <input id="input_search" type="text" placeholder="Recherche" name="looking_for" required>
+        <button id="button_search" type="submit" name="btn_search" value="searching">🔎</button>
+      </form>
+    </div>
+
+    <select class="order" name="order">
+      <option value="" selected="selected" hidden="hidden">Order By</option>
+      <option value="dog">Name</option>
+      <option value="cat">Price</option>
+      <option value="hamster">Date</option>
+  </select>
+
+  <div class="catalogue">
+    <img class="arrow" src="/private/images/FlêcheG.png" alt="">
+    <!-- <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre1.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
       </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/ex.jpg" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre1.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+
+    </div>
+    <div class="items">
+      <p class="Book_name">Titre livre</p>
+      <img src="/private/images/livre2.png" alt="" class="books">
+      <div class="info">
+        <h2 class="prix">20$</h2>
+        <h2 class="description">mathématique pour m'économie</h2>
+        <h2 class="vendeur"> vendu par Charles</h2>
+      </div>
+      <button class="achter">
+        achter
+      </button>
+    </div>
+    <img class="arrow" src="/private/images/FlêcheD.png" alt="">
+  </div> -->
+
+
+    <% articleList.forEach(function(article){ %>
+      <div class="items">
+        <p class="Book_name"> <%= article.title %> </p>
+        <img src= <%= article.image %> alt="Syllabus-image" class="books">
+        <div class="info">
+          <h2 class="prix"> <%= article.price %> €</h2>
+          <h2 class="description"> <%= article.desc %> </h2>
+          <h2 class="vendeur"> vendu par Charles</h2>
+        </div>
+        <button class="achter">
+          achter id= <%= article.id %>
+        </button>
+      </div>
+    <% }) %>
+
+
 </body>
