Ajout de la page d'achat et du système de rating

--- a/private/index.ejs
+++ b/private/index.ejs
@@ -102,8 +102,8 @@
           <h2 class="description"> <%= article.desc %> </h2>
           <h2 class="vendeur"> vendu par Charles</h2>
         </div>
-        <button class="achter">
-          achter id= <%= article.id %>
+        <button class="achter" onclick="location.href='/buy?artID=<%= article.id %>';" >
+          Acheter
         </button>
       </div>
     <% }) %>
