--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -13,7 +13,7 @@
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
-    <input type="button" value="connexion" id="connexion" onclick="location.href='/login';">
+    <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
 
   </header>
 </head>
@@ -21,23 +21,29 @@
 <body>
   <hr>
 
-  <h2 class="Name">Probabilités pour Scientifiques et Ingénieurs (2ème éd.)</h2>
+  <h2 class="Name"> <%= title %> </h2>
   <div class="selling">
     <img class="imagedulivre" src=<%= image %> alt="Syllabus-image">
     <div class="txt">
-      <input class="btnAchter" type="button" value="Acheter pour 25€">
-      <p class="resume">Livre en parfait état. Probabilités pour Scientifiques et Ingénieurs (2ème éd.) pour le cours de probabilités et de statistique. Quelques notes sont notés dans le livre au chapitre 4, 5 et 7 <hr width="100%" color="black"></p>
-      <h4 class="SELLER">Seller: </h4> <p>EmilienV05</p>
+      <input class="btnAchter" type="button" value="Acheter pour <%= price %> €">
+      <p class="resume"> <%= desc %> <hr width="100%" color="black"></p>
+      <h4 class="SELLER">Seller: </h4> <p> <%= seller %> </p>
     </div>
   </div>
 
   <div class="Star">
-    <h2>Star Rating</h2>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star"></span>
+    <% for(let i=0; i < rate; i++){ %>
+    
+      <span class="fa fa-star checked"></span>
+
+    <% } %>
+
+    <% for (let j=0; j < 5 - rate; j++) { %>
+
+      <span class="fa fa-star"></span>
+
+    <% } %>
+
   </div>
 
 </body>
