--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -22,7 +22,7 @@
   <hr>
 
   <h2 class="Name">
-    <%= title %>
+    <strong><%= title %></strong>
   </h2>
   <div class="selling">
     <img class="imagedulivre" src=<%=image %> alt="Syllabus-image">
@@ -37,26 +37,28 @@
         <%= desc %>
           <hr width="100%" color="black">
       </p>
-      <h4 class="SELLER">Seller: </h4>
+      <div class="">
+
+      </div><h4 class="SELLER">Seller: </h4>
       <p>
         <%= seller %>
       </p>
+      <div class="Star">
+        <% for(let i=0; i < rate; i++){ %>
+    
+          <span class="fa fa-star checked"></span>
+    
+          <% } %>
+    
+            <% for (let j=0; j < 5 - rate; j++) { %>
+    
+              <span class="fa fa-star"></span>
+    
+              <% } %>
+      </div>
     </div>
   </div>
 
-  <div class="Star">
-    <% for(let i=0; i < rate; i++){ %>
 
-      <span class="fa fa-star checked"></span>
-
-      <% } %>
-
-        <% for (let j=0; j < 5 - rate; j++) { %>
-
-          <span class="fa fa-star"></span>
-
-          <% } %>
-
-  </div>
 
 </body>
