--- a/private/style.css
+++ b/private/style.css
@@ -211,42 +211,50 @@ header {
   }
 /* BUY*/
 
-
+.name{
+  position: relative;
+  left: 25%;
+  text-decoration: underline ;
+}
 
 
 .selling{
+  border-radius: 1em;
   position: relative;
   left: 25%;
   display: flex;
-  width: 600px;
-  height: 500px;
+  width: 60em;
+  height: 47em;
   justify-content: space-between;
+  background-image: linear-gradient(#fbc2eb , #a6c1ee)
 }
 .txt{
-  background-color: #e4fdc4;
+  margin: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 30em;
+  border: #000 0.1em solid;
   
-  border: #000 1px solid;
-  border-left: none;
-  
-
 }
 .resume{
   color: rgb(121,37,18);
+  height: 10em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .btnachter{
   cursor: pointer;
   border-radius: 30px;
   border-top: none;
 }
-
-.Star{
-  position: relative;
-  left: 600px;
+.imagedulivre{
+  margin: 1em;
+  border: #000 0.1em solid;
+  
 }
+
 
 /* SELL*/
 .SellProduct{
