--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="FR">
+
 <head>
   <meta charset="utf-8">
   <title>SyllaExchange</title>
@@ -22,7 +25,9 @@
   <hr>
 
   <h2 class="Name">
-    <strong><%= title %></strong>
+    <strong>
+      <%= title %>
+    </strong>
   </h2>
   <div class="selling">
     <img class="imagedulivre" src=<%=image %> alt="Syllabus-image">
@@ -39,26 +44,26 @@
       </p>
       <div class="">
 
-      </div><h4 class="SELLER">Seller: </h4>
+      </div>
+      <h4 class="SELLER">Seller: </h4>
       <p>
         <%= seller %>
       </p>
       <div class="Star">
         <% for(let i=0; i < rate; i++){ %>
-    
+
           <span class="fa fa-star checked"></span>
-    
+
           <% } %>
-    
+
             <% for (let j=0; j < 5 - rate; j++) { %>
-    
+
               <span class="fa fa-star"></span>
-    
+
               <% } %>
       </div>
     </div>
   </div>
-
-
-
 </body>
+
+</html>
