--- a/private/login.ejs
+++ b/private/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="FR">
-  
+
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
@@ -17,7 +17,7 @@
     </a>
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
-    
+
     <input type="button" value="connexion" id="connexion" onclick="location.href='/login';">
 
   </header>
@@ -25,53 +25,55 @@
 
 <body> <!-- inspired from http://frontendfreecode.com/register-login-form-with-tabs-using-bootstrap -->
   <div class="inner cover">
-      <div class="panel panel-default">
-          
-        <div class="panel-body">
-              
-          <ul id="dTab" class="nav nav-tabs">
-            <li class="active"><a href="#pane1" data-toggle="tab">Register</a></li>
-            <li><a href="#pane2" data-toggle="tab">Login</a></li>
-          </ul>
-          
-          <div class="tab-content">
-            <div id="pane1" class="tab-pane fade in active">
-                      
-              <form action="" method="POST">
-                <fieldset>
-                  <label class="control-label" for="username">Username</label>
-                  <input type="text" id="username" name="username" placeholder="Username" class="form-control" required/>
-                  
-                  <label class="control-label" for="email">E-mail</label>
-                  <input type="email" id="email" name="email" placeholder="Email" class="form-control" required/>
-                  
-                  <label class="control-label" for="password">Password</label>
-                  <input type="password" id="password" name="password" placeholder="Password" class="form-control" required/>
-                  
-                  <label class="control-label" for="password_confirm">Password (Confirm)</label>
-                  <input type="password" id="password_confirm" name="password_confirm" placeholder="Confirm password" class="form-control" required/>
-                  
-                  <button class="btn btn-success" name="btn" value="register">Register</button>
-                </fieldset>
-              </form>
-            </div>
+    <div class="panel panel-default">
 
-            <div id="pane2" class="tab-pane fade">
-              <form role="form" action="" method="POST">
-                <label for="email">Email address</label>
-                <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" />
-                
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" id="password" placeholder="Password" />
-                
-                <button type="submit" class="btn btn-success" name="btn" value="login">Login</button>
-              </form>          
-            </div>
+      <div class="panel-body">
+
+        <ul id="dTab" class="nav nav-tabs">
+          <li class="active"><a href="#pane1" data-toggle="tab">Register</a></li>
+          <li><a href="#pane2" data-toggle="tab">Login</a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div id="pane1" class="tab-pane fade in active">
+
+            <form action="" method="POST">
+              <fieldset>
+                <label class="control-label" for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Username" class="form-control" required />
+
+                <label class="control-label" for="email">E-mail</label>
+                <input type="email" id="email" name="email" placeholder="Email" class="form-control" required />
+
+                <label class="control-label" for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Password" class="form-control"
+                  required />
+
+                <label class="control-label" for="password_confirm">Password (Confirm)</label>
+                <input type="password" id="password_confirm" name="password_confirm" placeholder="Confirm password"
+                  class="form-control" required />
+
+                <button class="btn btn-success" name="btn" value="register">Register</button>
+              </fieldset>
+            </form>
+          </div>
+
+          <div id="pane2" class="tab-pane fade">
+            <form role="form" action="" method="POST">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" />
+
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" id="password" placeholder="Password" />
+
+              <button type="submit" class="btn btn-success" name="btn" value="login">Login</button>
+            </form>
           </div>
         </div>
       </div>
-       
-  </div>   
+    </div>
+
+  </div>
 
   <div>
     <h4>
@@ -80,4 +82,5 @@
   </div>
 
 </body>
+
 </html>
