--- a/private/sell.ejs
+++ b/private/sell.ejs
@@ -1,57 +1,62 @@
+<!DOCTYPE html>
+<html lang="FR">
+
 <head>
-    <meta charset="utf-8">
-    <title>SyllaExchange</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/logo.icon">
-  
-    <header>
-      <a href="/">
-        <img class="logo" src="images/logo.png" alt="SyllaExchange-Logo">
-      </a>
-  
-      <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
-  
-      <!-- lien pour upload img: https://www.bezkoder.com/node-js-upload-image-mysql/ -->
-      <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
-  
-    </header>
+  <meta charset="utf-8">
+  <title>SyllaExchange</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="images/logo.icon">
+
+  <header>
+    <a href="/">
+      <img class="logo" src="images/logo.png" alt="SyllaExchange-Logo">
+    </a>
+
+    <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
+
+    <!-- lien pour upload img: https://www.bezkoder.com/node-js-upload-image-mysql/ -->
+    <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
+
+  </header>
 </head>
 
 <body>
-    <hr>
+  <hr>
 
-    <form class="SellProduct" action="/sell" method="post" enctype="multipart/form-data">
-      <label for="title"><strong>Titre:</strong></label>
-      <input type="text" name="title" placeholder="Titre" required/>
+  <form class="SellProduct" action="/sell" method="post" enctype="multipart/form-data">
+    <label for="title"><strong>Titre:</strong></label>
+    <input type="text" name="title" placeholder="Titre" required />
 
-      <label for="description"><strong>Description:</strong></label>
-      <textarea name="description" placeholder="Description" cols="25" rows="5" style="height:200px" required></textarea>
+    <label for="description"><strong>Description:</strong></label>
+    <textarea name="description" placeholder="Description" cols="25" rows="5" style="height:200px" required></textarea>
 
-      <label for="price"><strong>Price:</strong></label>
-      <input type="number" name="price" min="0" placeholder="Price" required/>
+    <label for="price"><strong>Price:</strong></label>
+    <input type="number" name="price" min="0" placeholder="Price" required />
 
-      <label for="image"><strong>Image:</strong></label>
-      <input type="file" name="image" placeholder="Image" required/>
+    <label for="image"><strong>Image:</strong></label>
+    <input type="file" name="image" placeholder="Image" required />
 
-      <div class="star-rating">
-        <input type="radio" name="stars" id="star-a" value="5"/>
-        <label for="star-a"></label>
+    <div class="star-rating">
+      <input type="radio" name="stars" id="star-a" value="5" />
+      <label for="star-a"></label>
 
-        <input type="radio" name="stars" id="star-b" value="4"/>
-        <label for="star-b"></label>
+      <input type="radio" name="stars" id="star-b" value="4" />
+      <label for="star-b"></label>
 
-        <input type="radio" name="stars" id="star-c" value="3"/>
-        <label for="star-c"></label>
+      <input type="radio" name="stars" id="star-c" value="3" />
+      <label for="star-c"></label>
 
-        <input type="radio" name="stars" id="star-d" value="2"/>
-        <label for="star-d"></label>
+      <input type="radio" name="stars" id="star-d" value="2" />
+      <label for="star-d"></label>
 
-        <input type="radio" name="stars" id="star-e" value="1" required/>
-        <label for="star-e"></label>
-      </div>
+      <input type="radio" name="stars" id="star-e" value="1" required />
+      <label for="star-e"></label>
+    </div>
 
-      <button type="submit">Submit</button>
-      
-    </form>
-    
+    <button type="submit">Submit</button>
+
+  </form>
+
 </body>
+
+</html>
