--- a/private/style.css
+++ b/private/style.css
@@ -48,8 +48,8 @@ header {
 
 .search {
   position: absolute;
-  top: 150px;
-  right: 5px;
+  top: 20%;
+  right: 1%;
   background-color: rgb(255, 255, 255, 0.1s);
   width: 300px;
   height: 50px;
@@ -157,33 +157,34 @@ header {
 /* INDEX*/
 .order {
   position: absolute;
-  right: 50px;
-  top: 200px;
+  right: 5%;
+  top: 27%;
 }
 
 .catalogue {
+  top: 10vh;
+  left: 10%;
   position: relative;
-  left: 17%;
-  height: 400px;
-  width: 1200px;
-  margin: 100px;
+  height: 50vh;
+  width: 80vw;
   backdrop-filter: blur(30px);
   align-items: center;
   display: flex;
-  justify-content: center;
-  justify-content: space-between;
+  justify-content: space-between;  
 }
 
 .items {
-  width: 200px;
-  height: 400px;
+  width: 15vw;
+  height: 45vh;
   background-color: #e4fdc4;
   border: 2px solid black;
   border-radius: 30px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  box-shadow: 2px 10px 12px rgb(53, 49, 49);
+  text-align: center;
+
+
 }
 
 .books {
@@ -196,8 +197,6 @@ header {
 
 .info {
   font-size: 10px;
-  position: relative;
-  left: 40px;
 }
 
 .achter {
@@ -274,16 +273,18 @@ header {
 
 /* PROFIL*/
 .login_signup_form {
+  font-size: larger;
   position: relative;
-  left: 38%;
-  width: 500px;
-  height: 400px;
-  background-image: linear-gradient(rgb(3, 3, 156), rgb(57, 68, 214));
+  left: 25%;
+  width: 50vw;
+  height: 70vh;
+  background-image: linear-gradient(#005AA7,#FFFDE4 );
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   border-radius: 30px;
+
 }
 
 .text {
