--- a/private/index.ejs
+++ b/private/index.ejs
@@ -31,38 +31,82 @@
     </form>
   </div>
 
-  <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
-    <option value="" selected="selected" hidden="hidden">Order By</option>
-    <option value="name">Name</option>
-    <option value="price">Price</option>
-    <option value="date">Date</option>
-  </select>
-
-  <div class="catalogue">
-    <img class="arrow" src="/private/images/FlêcheG.png" alt="">
-
-    <% articleList.forEach(function(article){ %>
-      <div class="items">
-        <p class="Book_name">
-          <%= article.title %>
-        </p>
-        <img src=<%=article.image %> alt="Syllabus-image" class="books">
-        <div class="info">
-          <h2 class="prix">
-            <%= article.price %> €
-          </h2>
-          <h2 class="description">
-            <%= article.desc %>
-          </h2>
-          <h2 class="vendeur"> vendu par <%= article.seller %>
-          </h2>
+  <% if(viewPref) { %>
+   <!-- horizontal view -->
+    
+   <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
+      <option value="" selected="selected" hidden="hidden">Order By</option>
+      <option value="name">Name</option>
+      <option value="price">Price</option>
+      <option value="date">Date</option>
+    </select>
+  
+    <div class="catalogueH">
+      <img class="arrow" src="/private/images/FlêcheG.png" alt="">
+  
+      <% articleList.forEach(function(article){ %>
+        <div class="itemsH">
+          <p class="Book_name">
+            <%= article.title %>
+          </p>
+          <img src=<%=article.image %> alt="Syllabus-image" class="booksH">
+          <div class="info">
+            <h2>
+              <%= article.price %> €
+            </h2>
+            <h2>
+              <%= article.desc %>
+            </h2>
+            <h2> vendu par <%= article.seller %>
+            </h2>
+          </div>
+          <button class="acheterH" onclick="location.href='/buy?artID=<%= article.id %>';">
+            Acheter
+          </button>
         </div>
-        <button class="achter" onclick="location.href='/buy?artID=<%= article.id %>';">
-          Acheter
-        </button>
-      </div>
       <% }) %>
+    </div>
 
+
+  <% } else { %>  
+    <!-- vertical view -->
+    
+    <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
+      <option value="" selected="selected" hidden="hidden">Order By</option>
+      <option value="name">Name</option>
+      <option value="price">Price</option>
+      <option value="date">Date</option>
+    </select>
+  
+    <div class="catalogueV">
+      <img class="arrow" src="/private/images/FlêcheG.png" alt="">
+  
+      <% articleList.forEach(function(article){ %>
+        <div class="itemsV">
+          <p class="Book_name">
+            <%= article.title %>
+          </p>
+          <img src=<%=article.image %> alt="Syllabus-image" class="booksV">
+          <div class="info">
+            <h2>
+              <%= article.price %> €
+            </h2>
+            <h2>
+              <%= article.desc %>
+            </h2>
+            <h2> vendu par <%= article.seller %>
+            </h2>
+          </div>
+          <button class="acheterV" onclick="location.href='/buy?artID=<%= article.id %>';">
+            Acheter
+          </button>
+        </div>
+      <% }) %>
+    </div>
+
+
+  <% } %>
+  
 </body>
 
 </html>
